--- a/Project Data Science Programming.ipynb
+++ b/Project Data Science Programming.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "7794cfd2",
+   "id": "8127cb19",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "c8d25b3b",
+   "id": "aefdb1b4",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "b848f7d0",
+   "id": "129e34f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "633d99ec",
+   "id": "132f6460",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "5891c3d5",
+   "id": "4c20ea3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,8 +244,151 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 114,
+   "id": "1184315c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PRI_FDA Industry Name</th>\n",
+       "      <th>symptoms</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alcoholic Beverage</td>\n",
+       "      <td>ABDOMINAL PAIN</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alcoholic Beverage</td>\n",
+       "      <td>DIARRHOEA</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alcoholic Beverage</td>\n",
+       "      <td>VOMITING</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alcoholic Beverage</td>\n",
+       "      <td>NAUSEA</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alcoholic Beverage</td>\n",
+       "      <td>MALAISE</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14982</th>\n",
+       "      <td>Whole Grain/Milled Grain Prod/Starch</td>\n",
+       "      <td>TONGUE OEDEMA</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14983</th>\n",
+       "      <td>Whole Grain/Milled Grain Prod/Starch</td>\n",
+       "      <td>URINARY TRACT INFECTION BACTERIAL</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14984</th>\n",
+       "      <td>Whole Grain/Milled Grain Prod/Starch</td>\n",
+       "      <td>VIRAL TEST POSITIVE</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14985</th>\n",
+       "      <td>Whole Grain/Milled Grain Prod/Starch</td>\n",
+       "      <td>WHEEZING</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14986</th>\n",
+       "      <td>Whole Grain/Milled Grain Prod/Starch</td>\n",
+       "      <td>WOUND</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14987 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      PRI_FDA Industry Name  \\\n",
+       "0                        Alcoholic Beverage   \n",
+       "1                        Alcoholic Beverage   \n",
+       "2                        Alcoholic Beverage   \n",
+       "3                        Alcoholic Beverage   \n",
+       "4                        Alcoholic Beverage   \n",
+       "...                                     ...   \n",
+       "14982  Whole Grain/Milled Grain Prod/Starch   \n",
+       "14983  Whole Grain/Milled Grain Prod/Starch   \n",
+       "14984  Whole Grain/Milled Grain Prod/Starch   \n",
+       "14985  Whole Grain/Milled Grain Prod/Starch   \n",
+       "14986  Whole Grain/Milled Grain Prod/Starch   \n",
+       "\n",
+       "                                symptoms  count  \n",
+       "0                         ABDOMINAL PAIN      9  \n",
+       "1                              DIARRHOEA      9  \n",
+       "2                               VOMITING      9  \n",
+       "3                                 NAUSEA      8  \n",
+       "4                                MALAISE      6  \n",
+       "...                                  ...    ...  \n",
+       "14982                      TONGUE OEDEMA      1  \n",
+       "14983  URINARY TRACT INFECTION BACTERIAL      1  \n",
+       "14984                VIRAL TEST POSITIVE      1  \n",
+       "14985                           WHEEZING      1  \n",
+       "14986                              WOUND      1  \n",
+       "\n",
+       "[14987 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 106,
-   "id": "5c173cbf",
+   "id": "9540bfb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "9d73c345",
+   "id": "616931cc",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "54911dea",
+   "id": "7e7c41c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "722b1390",
+   "id": "dbd35c7b",
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "83af2e27",
+   "id": "0f60a144",
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "fed59c95",
+   "id": "2cf68510",
    "metadata": {},
    "outputs": [
     {
@@ -860,8 +1003,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 134,
+   "id": "f9ec8cce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<wordcloud.wordcloud.WordCloud at 0x7f82d5359250>"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from wordcloud import WordCloud\n",
+    "from collections import Counter\n",
+    "\n",
+    "word_could_dict = Counter(list(df1.symptoms))\n",
+    "wordcloud = WordCloud(width = 800, height = 800,\n",
+    "                background_color ='white',\n",
+    "                min_font_size = 10).generate_from_frequencies(word_could_dict)\n",
+    "wordcloud.to_file(\"symptoms_wordcloud.png\")\n",
+    "\n",
+    "\n",
+    "word_could_dict = Counter(list(df2.outcomes))\n",
+    "wordcloud = WordCloud(width = 800, height = 800,\n",
+    "                background_color ='white',\n",
+    "                min_font_size = 10).generate_from_frequencies(word_could_dict)\n",
+    "wordcloud.to_file(\"outcomes_wordcloud.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "61ef9c76",
+   "id": "5fdb0c8b",
    "metadata": {},
    "outputs": [],
    "source": []
