--- a/Project Data Science Programming.ipynb
+++ b/Project Data Science Programming.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 142,
    "id": "8127cb19",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 143,
    "id": "aefdb1b4",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
        "4    GASTROINTESTINAL DISORDER, PHYSICAL EXAMINATION  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 144,
    "id": "129e34f1",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 145,
    "id": "132f6460",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
        "41"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 146,
    "id": "4c20ea3b",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 147,
    "id": "1184315c",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
        "[14987 rows x 3 columns]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 148,
    "id": "9540bfb2",
    "metadata": {},
    "outputs": [],
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 149,
    "id": "616931cc",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 150,
    "id": "7e7c41c3",
    "metadata": {},
    "outputs": [],
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 151,
    "id": "dbd35c7b",
    "metadata": {},
    "outputs": [
@@ -735,7 +735,7 @@
        "[393 rows x 3 columns]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 152,
    "id": "0f60a144",
    "metadata": {},
    "outputs": [
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 153,
    "id": "2cf68510",
    "metadata": {},
    "outputs": [
@@ -966,7 +966,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,17 +1003,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 154,
    "id": "f9ec8cce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<wordcloud.wordcloud.WordCloud at 0x22bce49a620>"
+       "<wordcloud.wordcloud.WordCloud at 0x22bdaf06a10>"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 155,
    "id": "5fdb0c8b",
    "metadata": {},
    "outputs": [],
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 156,
    "id": "22b3d0c7",
    "metadata": {},
    "outputs": [],
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 157,
    "id": "2b0a1e8a",
    "metadata": {},
    "outputs": [
@@ -1229,7 +1229,7 @@
        "4  [GASTROINTESTINAL DISORDER, PHYSICAL EXAMINATION]  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 158,
    "id": "1e566cac",
    "metadata": {},
    "outputs": [
@@ -1402,7 +1402,7 @@
        "4  [GASTROINTESTINAL DISORDER, PHYSICAL EXAMINATION]              0  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 159,
    "id": "a57ba560",
    "metadata": {},
    "outputs": [
@@ -1424,7 +1424,7 @@
        "<AxesSubplot:xlabel='Industry'>"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 160,
    "id": "0c269ddd",
    "metadata": {},
    "outputs": [
@@ -1457,7 +1457,7 @@
        "<AxesSubplot:xlabel='Industry'>"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 161,
    "id": "4960b2ea",
    "metadata": {},
    "outputs": [
@@ -1514,46 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "id": "7ee76253",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0        [SWELLING FACE, RASH, WHEEZING, COUGH, HOSPITA...\n",
-      "1        [SWELLING FACE, RASH, WHEEZING, COUGH, HOSPITA...\n",
-      "2        [SWELLING FACE, RASH, WHEEZING, COUGH, HOSPITA...\n",
-      "3        [SWELLING FACE, RASH, WHEEZING, COUGH, HOSPITA...\n",
-      "4        [SWELLING FACE, RASH, WHEEZING, COUGH, HOSPITA...\n",
-      "                               ...                        \n",
-      "90781    [SWELLING FACE, RASH, WHEEZING, COUGH, HOSPITA...\n",
-      "90782    [SWELLING FACE, RASH, WHEEZING, COUGH, HOSPITA...\n",
-      "90783    [SWELLING FACE, RASH, WHEEZING, COUGH, HOSPITA...\n",
-      "90784    [SWELLING FACE, RASH, WHEEZING, COUGH, HOSPITA...\n",
-      "90785    [SWELLING FACE, RASH, WHEEZING, COUGH, HOSPITA...\n",
-      "Length: 90786, dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "all_symptoms = []\n",
-    "def iter_symptom_list(x):\n",
-    "    try:\n",
-    "        for item in x['Symptoms']:\n",
-    "            all_symptoms.append(item)\n",
-    "    except: \n",
-    "        pass\n",
-    "    return all_symptoms\n",
-    "\n",
-    "all_symptoms = df.apply(iter_symptom_list, axis=1)\n",
-    "print(all_symptoms)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 162,
    "id": "0c88722e",
    "metadata": {},
    "outputs": [
@@ -1620,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 163,
    "id": "796d42f8",
    "metadata": {},
    "outputs": [
@@ -1795,7 +1756,7 @@
        "4                        [GASTROINTESTINAL DISORDER]  "
       ]
      },
-     "execution_count": 138,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1814,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 164,
    "id": "22dd6fab",
    "metadata": {},
    "outputs": [
@@ -2036,7 +1997,7 @@
        "[5 rows x 100 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2051,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 165,
    "id": "4d814c22",
    "metadata": {},
    "outputs": [
@@ -2271,7 +2232,7 @@
        "[5 rows x 100 columns]"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2284,7 +2245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 166,
    "id": "516e8c4a",
    "metadata": {},
    "outputs": [
@@ -2497,7 +2458,7 @@
        "[5 rows x 114 columns]"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
