changes to wordcloud

--- a/Project Data Science Programming.ipynb
+++ b/Project Data Science Programming.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "8127cb19",
+   "execution_count": 3,
+   "id": "3c8c730e",
    "metadata": {},
    "outputs": [
     {
@@ -23,8 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "aefdb1b4",
+   "execution_count": 4,
+   "id": "917c3b1b",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "4    GASTROINTESTINAL DISORDER, PHYSICAL EXAMINATION  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,8 +192,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "129e34f1",
+   "execution_count": 5,
+   "id": "85758543",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "132f6460",
+   "id": "dfbbe1ca",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "4c20ea3b",
+   "id": "20492a02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "1184315c",
+   "id": "8ab9fb51",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "9540bfb2",
+   "id": "6fa59cd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "616931cc",
+   "id": "ec8b9171",
    "metadata": {},
    "outputs": [
     {
@@ -592,8 +592,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "7e7c41c3",
+   "execution_count": 12,
+   "id": "b17e86e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "dbd35c7b",
+   "id": "5b57a542",
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "0f60a144",
+   "id": "eb7e7e4b",
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "2cf68510",
+   "id": "28b178be",
    "metadata": {},
    "outputs": [
     {
@@ -1003,17 +1003,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "id": "f9ec8cce",
+   "execution_count": 13,
+   "id": "972be3c2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<wordcloud.wordcloud.WordCloud at 0x7f82d5359250>"
+       "<wordcloud.wordcloud.WordCloud at 0x7ff431895990>"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,14 +1022,14 @@
     "from wordcloud import WordCloud\n",
     "from collections import Counter\n",
     "\n",
-    "word_could_dict = Counter(list(df1.symptoms))\n",
+    "word_could_dict = Counter((df['SYM_One Row Coded Symptoms'].apply(pd.Series).stack()).tolist())\n",
     "wordcloud = WordCloud(width = 800, height = 800,\n",
     "                background_color ='white',\n",
     "                min_font_size = 10).generate_from_frequencies(word_could_dict)\n",
     "wordcloud.to_file(\"symptoms_wordcloud.png\")\n",
     "\n",
     "\n",
-    "word_could_dict = Counter(list(df2.outcomes))\n",
+    "word_could_dict = Counter((df['AEC_One Row Outcomes'].apply(pd.Series).stack()).tolist())\n",
     "wordcloud = WordCloud(width = 800, height = 800,\n",
     "                background_color ='white',\n",
     "                min_font_size = 10).generate_from_frequencies(word_could_dict)\n",
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fdb0c8b",
+   "id": "e1362551",
    "metadata": {},
    "outputs": [],
    "source": []
